[gd_scene load_steps=11 format=2]

[ext_resource path="res://ZonaNoTocable.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/art/HadamardSquare.png" type="Texture" id=2]
[ext_resource path="res://QPF_assets/art/HadamardSquare2.png" type="Texture" id=3]
[ext_resource path="res://QPF_assets/art/Had_PU_line.png" type="Texture" id=4]
[ext_resource path="res://QPF_assets/art/Had_PU_line2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.35452, 7.12242 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "on",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "turning_off",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "on",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "turning_off",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "on",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "turning_off",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "on",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "turning_off",
"speed": 6.0
} ]

[node name="ZonaNoTocable" type="KinematicBody2D"]
position = Vector2( 342, 619 )
script = ExtResource( 1 )

[node name="ZonaNoTocable" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaNoTocable"]
position = Vector2( 7.78015, 15.0045 )
scale = Vector2( 63.2364, 21.0167 )
shape = SubResource( 1 )

[node name="ColorFrame" type="ColorRect" parent="."]
margin_left = -521.0
margin_top = -179.0
margin_right = 537.0
margin_bottom = 209.0
mouse_filter = 2
color = Color( 0.929412, 0.0470588, 0.0470588, 0.682353 )

[node name="TurnOffHPUTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimatedSpriteUp" type="AnimatedSprite" parent="."]
position = Vector2( 17, -212 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "on"

[node name="AnimatedSpriteDown" type="AnimatedSprite" parent="."]
position = Vector2( 17, 241 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 3 )
animation = "on"

[node name="AnimatedSpriteLineUp" type="AnimatedSprite" parent="."]
position = Vector2( 19.2954, -176 )
scale = Vector2( 2.44875, 1 )
frames = SubResource( 4 )
animation = "on"

[node name="AnimatedSpriteLineDown" type="AnimatedSprite" parent="."]
position = Vector2( 19.2954, 206 )
scale = Vector2( 2.44875, 1 )
frames = SubResource( 5 )
animation = "on"

[node name="AnimationChangeTimer" type="Timer" parent="."]
[connection signal="body_entered" from="ZonaNoTocable" to="." method="_on_ZonaNoTocable_body_enter"]
[connection signal="body_exited" from="ZonaNoTocable" to="." method="_on_ZonaNoTocable_body_exit"]
[connection signal="timeout" from="TurnOffHPUTimer" to="." method="_on_TurnOffHPUTimer_timeout"]
[connection signal="timeout" from="AnimationChangeTimer" to="." method="_on_AnimationChangeTimer_timeout"]
